<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- 连接状态指示 -->
    <item
        android:id="@+id/action_connection"
        android:icon="@drawable/ic_connection_dot"
        android:title="@string/status_disconnected"
        app:iconTint="@color/status_disconnected"
        app:showAsAction="always" />

    <!-- 设置按钮 -->
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/btn_settings"
        android:visible="true"
        app:iconTint="@color/text_secondary"
        app:showAsAction="always" />

    <!-- 溢出菜单 -->
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_info"
        android:title="@string/about_title"
        app:iconTint="@color/text_secondary"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logs"
        android:icon="@drawable/ic_logs"
        android:title="@string/logs_title"
        app:iconTint="@color/text_secondary"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_delete"
        android:title="@string/clear_history"
        app:iconTint="@color/error"
        app:showAsAction="never" />

    <!-- 多选模式专用按钮 -->
    <item
        android:id="@+id/action_select_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/message_delete_title"
        app:iconTint="@color/error"
        app:showAsAction="always"
        android:visible="false" />

    <item
        android:id="@+id/action_select_done"
        android:icon="@drawable/ic_check"
        android:title="@string/select_mode_done"
        app:iconTint="@color/accent"
        app:showAsAction="always"
        android:visible="false" />

</menu>
