<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_days"
        android:icon="@drawable/ic_calendar"
        android:title="@string/logs_days"
        app:iconTint="@color/text_primary"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_copy"
        android:title="@string/logs_copy"
        app:iconTint="@color/text_primary"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/logs_share"
        app:iconTint="@color/text_primary"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_delete"
        android:title="@string/logs_clear"
        app:iconTint="@color/text_primary"
        app:showAsAction="never" />

</menu>
